<resources>
    <string name="app_name">Projeto Smart Tools</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cadastro_cliente">CadastroCliente</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_cliente_cadastro">ClienteCadastro</string>
    <string name="placa_carro_servico">Digite a placa do carro</string>
    <string name="continuar_servico">Continuar Serviço</string>
    <string name="cadastro_carro">Cadastrar Carro</string>
    <string name="detalhe_carro">Cadastro serviço</string>

    <string name="nome_oficina">Nome da oficina:</string>
    <string name="sair_do_aplicativo">Sair do aplicativo</string>
    <string name="telefone">Telefone:</string>
    <string name="endereco">Endereço:</string>
    <string name="cnpj">CNPJ:</string>
    <string name="email">Email:</string>
    <string name="nova_transacao">Nova Transação</string>


    <string name="nome_cliente">Nome</string>
    <string name="placa_carro">Placa do Carro:</string>
    <string name="montadora_carro">Montadora:</string>
    <string name="modelo_carro">Modelo:</string>




    <string-array name="categoria_entrada">
        <item>Manutenção</item>
        <item>Troca de óleo</item>
        <item>Funilaria</item>
        <item>Peças</item>
        <item>Pinturas</item>
    </string-array>

    <string-array name="categoria_saida">
        <item>Funcionario</item>
        <item>Contas</item>
        <item>Peças</item>
        <item>Outros</item>
    </string-array>
</resources>
