<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F2E7"
    tools:context=".Servicos.CadastroDaPlaca">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="250dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/placa_carro_servico"
                android:textColor="#2C3333"
                android:textSize="15sp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/botao_mecanico"
                android:text="@string/continuar_servico">
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/botao_mecanico"
                android:text="@string/cadastro_carro">
            </Button>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>