<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F2E7"
    tools:context=".Fragment.TabBarNavigation.AjustesFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/displaypicture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:src="@mipmap/mecanico"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.09">
                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/nome_oficina_info"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/nome_oficina"
                            android:textColor="#2C3333"
                            android:textSize="15sp">
                        </TextView>

                        <TextView
                            android:id="@+id/id_telefone_info"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/endereco"
                            android:textColor="#2C3333"
                            android:textSize="15sp">
                        </TextView>

                        <TextView
                            android:id="@+id/id_cnpj_info"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/cnpj"
                            android:textColor="#2C3333"
                            android:textSize="15sp">
                        </TextView>

                        <TextView
                            android:id="@+id/id_email_info"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginBottom="20dp"
                            android:text="@string/email"
                            android:textColor="#2C3333"
                            android:textSize="15sp">
                        </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/botao_mecanico"
                            android:text="@string/sair_do_aplicativo">
                        </Button>

                </LinearLayout>
        </LinearLayout>
</FrameLayout>