<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F2E7"
    tools:context=".DetalheServico.DetalheVeiculoServico">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="112dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/view_with_corner_radius">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detalhe_carro"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="120dp"
                android:textSize="24sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:text="@string/nome_cliente"
                android:textColor="#2C3333"
                android:textSize="15sp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/telefone"
                android:textColor="#2C3333"
                android:textSize="15sp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/placa_carro"
                android:textColor="#2C3333"
                android:textSize="15sp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/montadora_carro"
                android:textColor="#2C3333"
                android:textSize="15sp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/modelo_carro"
                android:textColor="#2C3333"
                android:textSize="15sp">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="27dp"
                android:tooltipText="Data da Entrada"
                android:id="@+id/ti_data_entrada">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Data"
                    android:inputType="date">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="27dp"
                android:tooltipText="Digite o valor"
                android:id="@+id/ti_valor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Valor"
                    android:inputType="number">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:text="Cadastrar"
                android:onClick="goToConfirmPassword"
                android:background="@drawable/botao_mecanico">
            </Button>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>